--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@imengyu/vue3-context-menu": "^1.4.2",
     "axios": "^1.7.3",
     "element-plus": "^2.7.8",
-    "pinia": "^2.2.0",
-    "vue": "^3.4.35"
+    "pinia": "^2.2.1",
+    "vue": "^3.4.36"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
+    "npm-check-updates": "^17.0.5",
     "typescript": "^5.5.4",
-    "vite": "^5.3.5",
+    "vite": "^5.4.0",
     "vite-plugin-vue-devtools": "^7.3.7",
     "vue-tsc": "^2.0.29"
   }
